2016-11-08	"A child of five could understand this!  Fetch me a child of
		 five."

		infra/KeccakCodePackage.tar.xz ,
		infra/lolwutconf.tar.xz :
		- added backup packages (mainly to work around issue where
		  GitHub's release packages do not include submodules)

		configure :
		- now unpacks infra/KeccakCodePackage.tar.xz and infra/
		  lolwutconf.tar.xz if submodules are not already present

		GNUmakefile :
		- `make distclean' now cleans away submodule directories if
		  they were unpacked from infra/*.tar.xz
		- now includes lolwutconf.mk from $(conf_Lolwutconf_dir)

		lolwutconf/ :
		- bumped to d090d6a1d5

2016-11-06	Let static relocations lie.  (2)

		include/innocent-pear/lolwut.h :
		- for ARM,
		  - now makes sure that lolwut_impl<...>::Disp is even,
		    to work around a bug (?) in binutils in handling Thumb
		    function symbols
		  - added code for case where the target is Thumb sans
		    Thumb-32 but with dynamic linking

		include/innocent-pear/rofl.h :
		- rofl_impl_syscall<...>::syscall_raw(...) for ARM:  this
		  sucks

		.travis.yml :
		- added test setups for armv6 and armv4t with dynamic
		  linking, since the going is getting weird...

2016-11-05	"There is more to life than increasing its speed."

		include/innocent-pear/rofl.h :
		- for ARM, now scrambles calls to the syscall routine(s)
		- reduced layers of scrambling of syscall parameters

		share/innocent-pear/doge-06.cc :
		- split main routine into two; moved cache clearing after
		  relocation processing

2016-11-04	Yes, it still compiles!  ;-)

		GNUmakefile :
		- now dumps smaller portions of compiled test binaries (again)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- upped default scrambling levels (again)

		include/innocent-pear/rofl.h :
		- upped default scrambling levels
		- now uses `no_cfi' attribute on rofl_impl_syscall<...>::
		  syscall_raw(...) for ARM

		share/innocent-pear/doge-01.cc :
		- split huge function into 3 parts